Set everything up live on prod
Featuring the worst hack to get around that sqlite issue with zappa - use postgres instead even though I don't need it at all

--- a/cowin18-api/ops/.env.template
+++ b/cowin18-api/ops/.env.template
@@ -1,4 +1,10 @@
 DEBUG=true
 
+POSTGRES_DATABASE=pupcket
+POSTGRES_USER=pupcket
+POSTGRES_PASSWORD=pupcket
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
 REDIS_HOST=redis
 REDIS_PORT=6379
