--- a/cowin18-api/docker-compose.yml
+++ b/cowin18-api/docker-compose.yml
@@ -9,6 +9,7 @@ x-services:
       context: .
       dockerfile: Dockerfile
     depends_on:
+      - db
       - redis
     restart: on-failure:5
     volumes:
@@ -22,6 +23,15 @@ services:
     command: bash -c "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
+
+    db:
+      image: postgres:10-alpine
+      container_name: cowin18-postgres
+      environment:
+        - POSTGRES_USER=cowin18
+        - POSTGRES_PASSWORD=cowin18
+      volumes:
+        - cowin18-data-postgres:/var/lib/postgresql/data
 
   redis:
     image: redis
@@ -41,4 +51,5 @@ services:
 
 volumes:
   cowin18-ipython:
+  cowin18-data-postgres:
   cowin18-data-redis:
