Fix db creds in env

--- a/cowin18-api/ops/.env.template
+++ b/cowin18-api/ops/.env.template
@@ -1,8 +1,8 @@
 DEBUG=true
 
-POSTGRES_DATABASE=pupcket
-POSTGRES_USER=pupcket
-POSTGRES_PASSWORD=pupcket
+POSTGRES_DATABASE=cowin18
+POSTGRES_USER=cowin18
+POSTGRES_PASSWORD=cowin18
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
